<resources>
    <string name="app_name">MyShop</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">FORGOT PASSWORD</string>
    <string name="login">Login</string>
    <string name="i_don_t_have_an_account">I DON\'T HAVE AN ACCOUNT</string>
    <string name="login_toolbar">LOGIN</string>
    <string name="register">REGISTER</string>
    <string name="i_have_an_account">I HAVE AN ACCOUNT</string>
    <string name="full_name">Full Name</string>
    <string name="number">Number</string>
    <string name="home">Home</string>
    <string name="cart">Cart</string>
    <string name="orders">Orders</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="women_s_wear">Women\'s Wear</string>
    <string name="android">Android</string>
    <string name="realme_nazro_50">RealMe Nazro 50</string>
    <string name="dummy_text_description">5G, OS: Android 10, RAM: 16 GB, Internal Storage: 256 GB, Primary Camera: 64 MP, Secondary Camera: 13 MP</string>
    <string name="_200">$ 200</string>
    <string name="total_bill_amount">Total Bill Amount</string>
    <string name="_640">$ 640</string>
    <string name="checkout">CHECKOUT</string>
    <string name="add_to_cart">ADD TO CART</string>
    <string name="add_plus">+</string>
    <string name="cart_minus">-</string>
    <string name="next">NEXT</string>
    <string name="_440">$ 440</string>
    <string name="amount">Amount</string>
    <string name="_1">1</string>
    <string name="quantity">Quantity</string>
    <string name="unit_price">Unit Price</string>
    <string name="add_address">Add Address</string>
    <string name="dummy_addy">402 W. Marine Way, Suite 100, Ships Building, Kodiak, Kodia, Island, AK, 99615</string>
    <string name="home_addy">HOME</string>
    <string name="cart_items">Cart Items</string>
    <string name="payment_option">Payment Option:</string>
    <string name="cash_on_delivery">Cash On Delivery</string>
    <string name="confirm_and_place_order">CONFIRM AND PLACE ORDER</string>
    <string name="switch_theme">Switch Theme</string>
    <string name="txt_switch_theme">Switch Theme</string>
    <string name="_1_929_941_3221">+ 1 929 941 3221</string>
    <string name="welcome_amar">Welcome Amar</string>
    <string name="amar_gmail_com">amar@gmail.com</string>
    <string name="add_new_address">Add New Address</string>
    <string name="address_title">Address Title</string>
    <string name="address">Address</string>
    <string name="cancel">CANCEL</string>
    <string name="save">SAVE</string>
</resources>