<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragment.registrationFragments.LoginFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_login"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/primary_app_color"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/login_toolbar"
            android:textColor="@color/white"
            android:textSize="@dimen/_27sp"/>

    </androidx.appcompat.widget.Toolbar>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img_logo"
        android:layout_width="@dimen/_80dp"
        android:layout_height="@dimen/_80dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/horizontal_up" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_email"
        android:layout_width="@dimen/_0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_50dp"
        android:text="@string/email"
        android:textSize="@dimen/_21sp"
        app:layout_constraintEnd_toStartOf="@id/vertical_right"
        app:layout_constraintStart_toEndOf="@id/vertical_left"
        app:layout_constraintTop_toBottomOf="@id/img_logo" />

    <androidx.appcompat.widget.AppCompatEditText
        android:padding="@dimen/_10dp"
        android:id="@+id/ed_email"
        android:layout_width="@dimen/_0dp"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_20sp"
        android:layout_marginTop="@dimen/_10dp"
        android:background="@drawable/edittext_shape"
        app:layout_constraintEnd_toStartOf="@id/vertical_right"
        app:layout_constraintStart_toEndOf="@id/vertical_left"
        app:layout_constraintTop_toBottomOf="@id/txt_email" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_password"
        android:layout_width="@dimen/_0dp"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textSize="@dimen/_21sp"
        android:layout_marginTop="@dimen/_10dp"
        app:layout_constraintEnd_toStartOf="@id/vertical_right"
        app:layout_constraintStart_toEndOf="@id/vertical_left"
        app:layout_constraintTop_toBottomOf="@id/ed_email" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/ed_password"
        android:padding="@dimen/_10dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_20sp"
        android:layout_marginTop="@dimen/_10dp"
        android:background="@drawable/edittext_shape"
        android:inputType="textPassword"
        app:layout_constraintEnd_toStartOf="@id/vertical_right"
        app:layout_constraintStart_toEndOf="@id/vertical_left"
        app:layout_constraintTop_toBottomOf="@id/txt_password" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_forgot_password"
        android:layout_width="@dimen/_0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20dp"
        android:text="@string/forgot_password"
        android:textColor="@color/orange_app"
        android:textSize="@dimen/_24sp"
        app:layout_constraintEnd_toStartOf="@id/vertical_right"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@id/vertical_left"
        app:layout_constraintTop_toBottomOf="@id/ed_password" />

    <androidx.appcompat.widget.AppCompatButton
        style="@style/PrimaryButton"
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20dp"
        android:text="@string/login"
        app:layout_constraintBottom_toTopOf="@+id/txt_no_account"
        app:layout_constraintEnd_toStartOf="@id/vertical_right"
        app:layout_constraintStart_toEndOf="@id/vertical_left"
        app:layout_constraintTop_toBottomOf="@id/txt_forgot_password" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_no_account"
        android:gravity="center_horizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/i_don_t_have_an_account"
        android:textSize="@dimen/_24sp"
        android:textColor="@color/orange_app"
        app:layout_constraintEnd_toStartOf="@id/vertical_right"
        app:layout_constraintStart_toEndOf="@id/vertical_left"
        app:layout_constraintBottom_toTopOf="@id/horizontal_down" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal_down"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9" />


</androidx.constraintlayout.widget.ConstraintLayout>